i think im finally throught with this TT

--- a/about.html
+++ b/about.html
@@ -24,82 +24,116 @@
 </head>
 
 <body>
-    <div class="warning">
+    <!-- <div class="warning">
         <p>
             <i class="fa fa-tools"></i>
             SITE EN MAINTENANCE
         </p>
-    </div>
+    </div> -->
     <!-- Header -->
     <nav>
-        <h1 class="brand animate fadeInLeft">NOIHSE</h1>
-        <ul class="animate fadeInTop">
+        <h1 class="brand animated fadeInLeft">
+            <a href="index.html" style="color:red;">NOIHSE</a>
+        </h1>
+        <ul class="animated zoomIn">
             <li><a href="index.html">Accueil</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="about.html" style="color:red;">A propos</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <!-- Nos mission -->
-    <!-- Qui sommes-nous -->
-    <div class="container">
-        <h5 class="header">Découvrez l'entreprise</h5>
-        <p>NOIHSE (Nouvelle Organisation Industrielle en Hygiène Sécurité et Environnement) est une société spécialisée dans
-            les domaines du <span>Nettoyage et Entretien industriel</span> et de la <span>Conception Visuelle</span></p>
-        <p>La compétence, le professionnalisme, la rigueur et le sérieux de ses dirigeants est ce qui caractérise le mieux
-            l'entreprise. Car tous sont issus d'une formation de qualiticien</p>
-    </div>
-    <div class="container">
-        <div class="contained">
-            NOIHSE Entretien et nettoyage Industriel Qui pourrait parler de nettoyage sans avoir de notions en qualité. Nous avons des
-            connaissance des normes ISO 90001, OHSAS 18001, ISO 14001, ISO 22000. Ces connaissances sont des pérogatives
-            pour garantir un nivea d'hygiène et de sécurité satisfaisant à votre structure. Les exigences de ses normes étant
-            connues nous vous garantissons un standard. Le programme de nettoyage et désinfection de l'entreprise vise à
-            ce que le sol, les murs, les plafonds, les vitres, l'ambiance des salles de travail, le matériel et les appareils
-            utilisés pour le travail soient maintenus en bon état de propreté. Un environnement propre évite de constituer
-            une source de contammination pour le personnel et le client. Une main d'oeuvre qualifiée et professionnelle est
-            l'atout de notre équipe.
-        </div>
-        <p>
-            Pour notre entreprise, il est important de pouvoir apporter une pleine et entière satisfaction dans les prestations effectuées.
-            Elle propose ses services dans le but de satisfaire les besoins spécifiques des entreprises du secteur industriel
-            ou tertiaire, des collectivités, des administrations et des particuliers dans le cadre de contrats ou de prestations
-            ponctuelles, en apportant des solutions techniques, efficaces et sûres pour entretenir et préserver leur capital
-            immobilier. Ainsi notre activité s'étend sur l'entretien général, la dératisation, la désinsectisation, le nettoyage
-            en hauteur et le nettoyage des surfaces.
-        </p>
-        <div class="contained">
+    <main class="white-bg">
+        <!-- Qui sommes-nous -->
+        <section class="about" style="background-color: rgba(0,0,0,.1);background-image: url('img/bg-white.jpg');background-repeat: no-repeat;background-size: cover;"">
+            <div class="container">
+                <div class="contained animated fadeInLeftBig">
+                    <h2 class="rouge">Découvrez l'entreprise</h2>
+                    <p>NOIHSE (Nouvelle Organisation Industrielle en Hygiène Sécurité et Environnement) est une société spécialisée dans
+                        les domaines du <span>Nettoyage et Entretien industriel</span> et de la <span>Conception Visuelle</span></p>
+                    <p>La compétence, le professionnalisme, la rigueur et le sérieux de ses dirigeants est ce qui caractérise le mieux
+                        l'entreprise. Car tous sont issus d'une formation de qualiticien</p>
+                    <div class="contained">
+                        NOIHSE Entretien et nettoyage Industriel Qui pourrait parler de nettoyage sans avoir de notions en qualité. Nous avons des
+                        connaissance des normes ISO 90001, OHSAS 18001, ISO 14001, ISO 22000. <br><br>Ces connaissances sont des pérogatives
+                        pour garantir un nivea d'hygiène et de sécurité satisfaisant à votre structure. Les exigences de ses normes étant
+                        connues nous vous garantissons un standard. Le programme de nettoyage et désinfection de l'entreprise vise à
+                        ce que le sol, les murs, les plafonds, les vitres, l'ambiance des salles de travail, le matériel et les appareils
+                        utilisés pour le travail soient maintenus en bon état de propreté. Un environnement propre évite de constituer
+                        une source de contammination pour le personnel et le client. Une main d'oeuvre qualifiée et professionnelle est
+                        l'atout de notre équipe.
+                    </div>
+                </div>
+                <div class="mission-section animated fadeInRightBig">
+                    <h2 class="rouge">Nos missions</h2>
+                    <p>
+                        NOIHSE est spécialisée dans les domaines : <br><br> - de la <a href="services.html#pack1" style="color:#000;text-decoration:underline;">conception visuelle des mesures de sensibilisations en hygiène, sécurité
+                        et environnement </a><br><br> - de l’<a href="services.html#pack3" style="color:#000;text-decoration:underline;">entretien de toutes surfaces et surtout une maitrise de l’entretien en industrie agro-alimentaire</a>
+                        <br><br>
+                        Les axes principaux ci-dessus renferment : <br><br>- la création d’animation vidéo pour des conférences, des
+                        cérémonies ; la confection d’affiches (micro perforé, vinyle, Kakemono) , de badges et une aide à la créativité
+                        et à la couverture médias surtout des évènements en entreprise, des séminaires, des ateliers etc <br><br>
+                        - l’entretien en hauteur et des sols , des usines de café- cacao , de noix de cajou ( anacarde) ; le pest control
+                        , la désinsectisation. NOIHSE est constituée d’une équipe dynamique regroupant plusieurs disciplines. Dans l’attente
+                        d’une réponse favorable à notre offre, veuillez croire, Monsieur le Directeur Général, en l’expression de mes
+                        salutations distinguées.
 
-        </div>
-    </div>
-    <div class="mission-section">
-        <h2 class="rouge">Nos missions</h2>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam asperiores quibusdam ducimus dolores illum autem reiciendis
-            voluptate odit quam sed dolorem, saepe vel sequi itaque cupiditate ullam, provident repellat voluptatum.
-        </p>
-        <p>
-            NOIHSE est spécialisée dans les domaines : - de la conception visuelle des mesures de sensibilisations en hygiène, sécurité
-            et environnement - de l’entretien de toutes surfaces et surtout une maitrise de l’entretien en industrie agro-alimentaire
-            Les axes principaux ci-dessus renferment : d’une part - la création d’animation vidéo pour des conférences, des
-            cérémonies ; la confection d’affiches (micro perforé, vinyle, Kakemono) , de badges et une aide à la créativité
-            et à la couverture médias surtout des évènements en entreprise, des séminaires, des ateliers etc et d’autre part
-            - l’entretien en hauteur et des sols , des usines de café- cacao , de noix de cajou ( anacarde) ; le pest control
-            , la désinsectisation. NOIHSE est constituée d’une équipe dynamique regroupant plusieurs disciplines. Dans l’attente
-            d’une réponse favorable à notre offre, veuillez croire, Monsieur le Directeur Général, en l’expression de mes
-            salutations distinguées.
+                    </p>
+                </div>
+            </div>
+            <div class="row animated fadeInUp">
+                Pour notre entreprise, il est important de pouvoir apporter une pleine et entière satisfaction dans les prestations effectuées.
+            </div>
+        </section>
+        <!-- Partenaires slider -->
+        <section class="partenaires">
+            <h2 class="rouge animated fadeInUp">Ils nous font confiance</h2>
+            <style type="text/css">
+                section.partenaires .container{
+                    display: flex;
+                    flex-direction: row;
+                    flex-wrap: nowrap;
+                }
+                section.partenaires .container .block{
+                    flex-basis: 20%;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: center;
+                }
+                section.partenaires .container .block img{
+                    width: 100%;
+                    height: auto;
+                }
+                section.partenaires .container .block .text{
+                    
+                }
+            </style>
+            <div class="container animated zoomIn">
+                <div class="block">
+                  <img src="img/logo/casa.gif" style="width:60%">
+                  <!-- <div class="text">Société Cajou des savanes CASA </div> -->
+                </div>
+                <div class="block">
+                  <img src="img/logo/bollore.png" style="width:60%">
+                  <!-- <div class="text">Bolloré Africa Logistique</div> -->
+                </div>
 
-        </p>
-    </div>
-    <!-- Partenaires slider -->
-    <div class="container">
-        <h5 class="header">Ils nous font confiance</h5>
-        <div class="wrapper">
-            Société Cajou des savanes CASA Bouaké Bolloré Africa Logistique San Pedro NOSACC /SIVECCO/ San Pedro OLAM Cocoa Processing
-            San Pedro FORAGRI San Pedro AWAHUS SERVICE San Pedro
+                <div class="block">
+                  <img src="img/logo/awahus.png" style="width:60%">
+                  <!-- <div class="text">AWAHUS SERVICE</div> -->
+                </div>
 
-        </div>
-    </div>
+                <div class="block">
+                  <img src="img/logo/foragri.png" style="width:60%">
+                  <!-- <div class="text">FORAGRI</div> -->
+                </div>
+                <div class="block">
+                  <img src="img/logo/olam.jpg" style="width:60%">
+                  <!-- <div class="text">OLAM Cocoa Precessing</div> -->
+                </div>
+            </div>
+        </section>
+    </main>
     <!-- Contact -->
     <footer>
         <div class="contact-section animated fadeInLeft" id="contact">
