--- a/contact.html
+++ b/contact.html
@@ -18,20 +18,22 @@
 </head>
 
 <body>
-    <div class="warning">
+    <!-- <div class="warning">
         <p>
             <i class="fa fa-tools"></i>
             SITE EN MAINTENANCE
         </p>
-    </div>
+    </div> -->
     <!-- Header -->
     <nav>
-        <h1 class="brand animate fadeInLeft">NOIHSE</h1>
-        <ul class="animate fadeInRight">
+        <h1 class="brand animated fadeInLeft">
+            <a href="index.html" style="color:red;">NOIHSE</a>
+        </h1>
+        <ul class="animated zoomIn">
             <li><a href="index.html">Accueil</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="about.html">A propos</a></li>
-            <li><a href="#" class="active">Contact</a></li>
+            <li><a href="contact.html" style="color:red;">Contact</a></li>
         </ul>
     </nav>
     <div class="contact-section animated fadeInDownBig" id="contact">
@@ -43,75 +45,74 @@
                     marginwidth="0"></iframe>
             </div>
         </div>
+    </div>
+    <footer>
+        <div class="contact-section animated fadeInLeft" id="contact">
 
-        <div class="container-contact animated fadeIn">
-            <div class="left-pad">
-                <h3 class="rouge">Contactez-nous</h3>
-                <ul class="contact-pad">
-                    <li>
-                        <i class="rouge fa fa-map-marker-alt"></i>
-                        <span class="next-icon">
-                            <span class="bold">Addresse :</span> Cocody Palmeraie Bessikoi, <br/> Non loin de la pharmacie
-                            St Viateur
-                        </span>
 
-                    </li>
-                    <li>
-                        <i class="rouge fa fa-address-card"></i>
-                        <span class="next-icon">
-                            <span class="bold">Téléphone :</span> 07 71 91 62
-                        </span>
+            <div class="container-contact animated fadeIn">
+                <div class="left-pad">
+                    <h3 class="rouge">Contactez-nous</h3>
+                    <ul class="contact-pad">
+                        <li>
+                            <i class="rouge fa fa-map-marker-alt"></i>
+                            <span class="next-icon">
+                                <span class="bold">Addresse :</span> Cocody Palmeraie Bessikoi, <br/> Non loin de la pharmacie
+                                St Viateur
+                            </span>
+                        </li>
+                        <br>
+                        <li>
+                            <i class="rouge fa fa-address-card"></i>
+                            <span class="next-icon">
+                                <span class="bold">Téléphone :</span> 07 71 91 62
+                            </span>
 
-                    </li>
-                    <!-- <li>
-                        <i class="rouge fa fa-address-book"></i>
-                        <span class="next-icon">
-                            <span class="bold">Téléphone :</span> 45 25 96 55
-                        </span>
-                    </li> -->
+                        </li>
+                        <br>
+                        <li>
+                            <i class=" rouge fa fa-phone"></i>
+                            <span class="next-icon">
+                                <span class="bold"> Fixe :</span> 22 46 76 49
+                            </span>
+                        </li>
+                        <br>
+                        <li>
+                            <i class="rouge fa fa-envelope"></i>
+                            <span class="next-icon">
+                                <span class="bold"> Email :</span> noihse1@gmail.com
+                            </span>
 
-                    <li>
-                        <i class=" rouge fa fa-phone"></i>
-                        <span class="next-icon">
-                            <span class="bold"> Fixe :</span> 22 46 76 49
-                        </span>
-
-                    </li>
-                    <li>
-                        <i class="rouge fa fa-envelope"></i>
-                        <span class="next-icon">
-                            <span class="bold"> Email :</span> noihse1@gmail.com
-                        </span>
-
-                    </li>
-                </ul>
-            </div>
-            <div class="right-pad">
-                <h3 class="rouge animated fadeIn">Envoyez-nous un message</h3>
-                <form action="">
-                    <div class="form-group group">
-                        <input type="text" placeholder="Nom">
-                        <input type="email" placeholder="Email">
-                    </div>
-                    <div class="form-group group">
-                        <input type="text" placeholder="Entreprise">
-                        <input type="text" placeholder="Objet du message">
-                    </div>
-                    <div class="form-group">
-                        <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
-                    </div>
-                    <div class="form-group groupelebouton">
-                        <button type="submit" class="button">
-                            <span>Envoyer</span>
-                        </button>
-                    </div>
-                </form>
+                        </li>
+                    </ul>
+                </div>
+                <div class="right-pad">
+                    <h3 class="rouge animated fadeIn">Envoyez-nous un message</h3>
+                    <form action="">
+                        <div class="form-group group">
+                            <input type="text" placeholder="Nom">
+                            <input type="email" placeholder="Email">
+                        </div>
+                        <div class="form-group group">
+                            <input type="text" placeholder="Entreprise">
+                            <input type="text" placeholder="Objet du message">
+                        </div>
+                        <div class="form-group">
+                            <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                        </div>
+                        <div class="form-group groupelebouton">
+                            <button type="submit" class="button">
+                                <span>Envoyer</span>
+                            </button>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
-        <!-- Container contact -->
-    </div><!-- Contact -->
-    <footer>
-        <p>Copyright &copy; NOIHSE 2019. Tous droits réservés.</p>
+        </div><!-- Contact -->
+        <div class="footer-bottom">
+            <p>Copyright &copy; NOIHSE 2019. Tous droits réservés.</p>
+        </div>
     </footer>
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/script.js"></script>
