--- a/index.html
+++ b/index.html
@@ -21,16 +21,18 @@
 </head>
 
 <body>
-    <div class="warning">
+    <!-- <div class="warning">
         <p>
             <i class="fa fa-tools"></i>
             SITE EN MAINTENANCE
-        </p>
+        </p> -->
     </div>
     <!-- Header -->
     <nav>
-        <h1 class="brand animate fadeInLeft">NOIHSE</h1>
-        <ul class="animate fadeInRight">
+        <h1 class="brand animated fadeInLeft">
+            <a href="index.html" style="color:red;">NOIHSE</a>
+        </h1>
+        <ul class="animated zoomIn">
             <li><a href="index.html" style="color:red;">Accueil</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="about.html">A propos</a></li>
@@ -42,14 +44,14 @@
         <div class="slides-wrapper">
             <div class="slide" id="slide1">
                 <div class="slide-overlay">
-                    <div class="caption animate fadeInDown">
+                    <div class="caption animated fadeInDown">
                         <div class="caption-overlay">
-                            <h1 class="rouge">Création Visuelle</h1>
+                            <h1 class="rouge" style="text-align:left;">Création Visuelle</h1>
                             <p>
                                 Passez vos messages et informations sur des affiches, flyers dans le format de votre souhait en quantité illimitée
                             </p>
-                            <a href="#pack1" class="caption-link">
-                                Voir plus
+                            <a href="#pack1" class="button">
+                                <span>Voir plus</span>
                             </a>
                         </div>
                     </div>
@@ -57,28 +59,28 @@
             </div>
             <div class="slide" id="slide2">
                 <div class="slide-overlay">
-                    <div class="caption animate fadeInDown">
-                        <h1 class="rouge">Développement Web</h1>
+                    <div class="caption animated fadeInDown">
+                        <h1 class="rouge" style="text-align:left;">Développement Web</h1>
                         <p>
                             Faites connaitre votre entreprise et Elargissez votre portée à l'international avec des sites web dynamiques et attrayants
                             !
                         </p>
-                        <a href="#pack3" class="caption-link">
-                            En savoir plus
+                        <a href="#pack3" class="button">
+                            <span>En savoir plus</span>
                         </a>
                     </div>
                 </div>
             </div>
             <div class="slide" id="slide3">
                 <div class="slide-overlay">
-                    <div class="caption animate fadeInDown">
-                        <h1 class="rouge">Hygiène et Sécurité Environnement</h1>
+                    <div class="caption animated fadeInDown">
+                        <h1 class="rouge" style="text-align:left;">Hygiène et Sécurité Environnement</h1>
                         <p>
                             Redonnez à votre environnement son éclat, nous vous proposons un service de nettoyage et entretien de qualité ! Besoin d'un
                             nettoyage rapide et efficace de vos locaux ?
                         </p>
-                        <a href="#pack4" class="caption-link">
-                            Conatactez-nous !
+                        <a href="#pack4" class="button">
+                            <span>Conatactez-nous !</span>
                         </a>
                     </div>
                 </div>
@@ -87,29 +89,15 @@
     </div>
     <!-- Nos mission -->
     <div class="mission-section">
-        <div class="container">
-            <h2 class="rouge">Notre Mission</h2>
-            <p>Pour notre entreprise, il est important de pouvoir apporter une pleine et entière satisfaction dans les prestations
-                effectuées.
-            </p>
-        </div>
+        <div class="container white-bg upper">
+            <h2 class="rouge animated slideInLeft">Nouvelle Organisation Industrielle en Hygiène Sécurité et Environnement (NOIHSE)</h2>
+            <div style="text-transform: uppercase;" class=" animated fadeIn">
+                Apporter à nos clients des services de qualité en vue d'optimiser leur productivité et d'améliorer leur environnement de travail est notre mission
+            </div >
+            <a href="about.html" class="button animated zoomIn" style="margin-top: 20px;">
+                <span>Découvrez NOIHSE</span>
+            </a>
 
-        <p>
-            NOIHSE est spécialisée dans les domaines : - de la conception visuelle des mesures de sensibilisations en hygiène, sécurité
-            et environnement - de l’entretien de toutes surfaces et surtout une maitrise de l’entretien en industrie agro-alimentaire
-            Les axes principaux ci-dessus renferment : d’une part - la création d’animation vidéo pour des conférences, des
-            cérémonies ; la confection d’affiches (micro perforé, vinyle, Kakemono) , de badges et une aide à la créativité
-            et à la couverture médias surtout des évènements en entreprise, des séminaires, des ateliers etc et d’autre part
-            - l’entretien en hauteur et des sols , des usines de café- cacao , de noix de cajou ( anacarde) ; le pest control
-            , la désinsectisation. NOIHSE est constituée d’une équipe dynamique regroupant plusieurs disciplines. Dans l’attente
-            d’une réponse favorable à notre offre, veuillez croire, Monsieur le Directeur Général, en l’expression de mes
-            salutations distinguées.
-
-        </p>
-        <div class="container">
-            <button>
-                Découvrez nos services
-            </button>
         </div>
     </div>
     <!-- Contact -->
