--- a/about.html
+++ b/about.html
@@ -42,9 +42,9 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <main class="white-bg" style="text-align: left;">
+    <main class="white-bg" style="text-align:left;">
         <!-- Qui sommes-nous -->
-        <section class="about" style="background-color: rgba(0,0,0,.1);background-image: url('img/bg-white.jpg');background-repeat: no-repeat;background-size: cover;"">
+        <section class="about" style="background-color: rgba(0,0,0,.1);background-image: url('img/bg-white.jpg');background-repeat: no-repeat;background-size: cover;">
             <div class="container">
                 <div class="contained animated fadeInLeftBig">
                     <h2 class="rouge">Découvrez l'entreprise</h2>
