--- a/services.html
+++ b/services.html
@@ -25,7 +25,7 @@
         </p>
     </div> -->
     <!-- Header -->
-    <div id="loader"></div>
+    <!-- <div id="loader"></div> -->
     <nav>
         <h1 class="brand animated fadeInLeft">
             <a href="index.html" style="color:red;">NOIHSE</a>
