--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
                         l'entreprise. Car tous sont issus d'une formation de qualiticien</p>
                     <div class="contained">
                         Qui pourrait parler de nettoyage sans avoir de notions en qualité. Nous avons connaissance des normes ISO 90001, OHSAS 18001, ISO 14001, ISO 22000. <br><br>Ces connaissances sont des pérogatives
-                        pour garantir un nivea d'hygiène et de sécurité satisfaisant à votre structure. Les exigences de ces normes étant
+                        pour garantir un niveau d'hygiène et de sécurité satisfaisant à votre structure. Les exigences de ces normes étant
                         connues nous vous garantissons un standard. Le programme de nettoyage et désinfection de l'entreprise vise à
                         ce que le sol, les murs, les plafonds, les vitres, l'ambiance des salles de travail, le matériel et les appareils
                         utilisés pour le travail soient maintenus en bon état de propreté. Un environnement propre évite de constituer
