--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                             <i class="rouge fa fa-map-marker-alt"></i>
                             <span class="next-icon">
                                 <span class="bold">Addresse :</span> Cocody Palmeraie Bessikoi, <br/> Non loin de la pharmacie
-                                St Viateur
+                                Saint Viateur
                             </span>
                         </li>
                         <br>
