--- a/services.html
+++ b/services.html
@@ -124,7 +124,7 @@
                     <div class="text">
                         <h3>Nettoyage en hauteur</h3>
                         <p>
-                            Vous avez des vitres, facades, toitures ou murs difficiles à entretenir du fait de leur hauteur ? NOIHSE s'en occupe
+                            Vous avez des vitres, facades, toitures ou murs difficiles à entretenir du fait de leur hauteur ? <br> NOIHSE s'en occupe
                         </p>
                     </div>
                 </div>
@@ -157,7 +157,7 @@
                             <i class="rouge fa fa-map-marker-alt"></i>
                             <span class="next-icon">
                                 <span class="bold">Addresse :</span> Cocody Palmeraie Bessikoi, <br/> Non loin de la pharmacie
-                                St Viateur
+                                Saint Viateur
                             </span>
                         </li>
                         <br>
