--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
         </section>
         <!-- Partenaires slider -->
         <section class="partenaires">
-            <h2 class="rouge animated fadeInUp">Ils nous font confiance</h2>
+            <h2 class="rouge animated fadeInUp">Ils continuent de nous faire confiance</h2>
             <style type="text/css">
                 section.partenaires .container{
                     display: flex;
@@ -146,7 +146,7 @@
                             <i class="rouge fa fa-map-marker-alt"></i>
                             <span class="next-icon">
                                 <span class="bold">Addresse :</span> Cocody Palmeraie Bessikoi, <br/> Non loin de la pharmacie
-                                St Viateur
+                                Saint Viateur
                             </span>
                         </li>
                         <br>
